--- a/src/glossaire.tex
+++ b/src/glossaire.tex
@@ -2,13 +2,18 @@
 
 \chapter*{Glossaire}
 
-\addcontentsline{toc}{chapter}{Glossaire}
-\markboth{Glossaire}{}
+\thispagestyle{empty}
 
 
 
-TODO: commandes LaTeX
+\textbf{BDD :} Base De Données.
 
-Bibliothèque : TODO
 
-Framework : ensemble de composants logiciels permettant le développement le développement rapide d'applications.
+\textbf{Client léger :} application fonctionnant dans un navigateur web, ne nécessitant aucune autre installation.
+
+
+%\newglossaryentry{framework}{
+%	name = Framework,
+%	description = ensemble de composants logiciels permettant le développement le développement rapide d'applications.
+%}
+\textbf{Framework :} ensemble de composants logiciels permettant le développement le développement rapide d'applications.
