--- a/src/partie_1.tex
+++ b/src/partie_1.tex
@@ -18,12 +18,16 @@
 
 \textit{Sopra Group} est une Sociétés de Service en Ingénierie Informatique, couramment appelé SSII.
 Créée en 1968 par Pierre PASQUIER et François ODIN, il s'agit d'un des plus anciennes et importante SSII.
-La société s'est d'abord révélé au niveau national grâce à de grands projets dans les domaines bancaires et avec le Ministère de l'Intérieur, avant de s'implanter au niveau européen et mondial.
+La société s'est d'abord révélée au niveau national grâce à de grands projets dans les domaines bancaires et avec le Ministère de l'Intérieur, avant de s'implanter au niveau européen et mondial.
 Avec plus de 14.300 collaborateurs en 2012, Sopra Group réalise un chiffre d'affaire supérieur à 1,2 milliards d'euros, principalement dans le domaine du conseil et des services en France.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Agence de Clermont-Ferrand}
 
-Michelin est le plus gros employeur de la région Auvergne, mais fait aussi appelle à de nombreuses sociétés extérieures comme les sociétés de service.
+Michelin est le plus gros employeur de la région Auvergne, mais fait aussi appel à de nombreuses sociétés extérieures comme les sociétés de service.
 Dû au nombre croissant de collaborateurs travaillant chez Michelin, la division Rhône-Alpes a créé l'agence de Clermont-Ferrand pour être au plus proche du client.
 
 L'agence de Clermont-Ferrand travaille aussi sur plusieurs autres projets importants.
@@ -60,7 +64,7 @@ Pour faciliter le recrutement d'anciens candidats, ou la recherche de candidats 
 Il peut s'agir par exemple de la recherche de candidats disponibles à certaines périodes, ou les candidats ayant un contrat en cours dont il n'a pas fourni toutes les pièces justificatives.
 
 Enfin pour pouvoir augmenter leur productivité, il sera nécessaire de produire une application ergonomique et facile d'utilisation permettant la saisie de nombreuses données le plus rapidement possible.
-Limagrain reçoit en effet plus de 1.000 candidatures en moins d'un mois dont une grande partie effectuent des contrats.
+Limagrain reçoit en effet plus de 1.000 candidatures en moins d'un mois dont une grande partie effectue des contrats.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -69,7 +73,7 @@ Limagrain reçoit en effet plus de 1.000 candidatures en moins d'un mois dont un
 \subsection{Solution actuelle}
 
 Le service de recrutement utilisait une petite application Access développée à partir d'un document Excel, de Microsoft Office.
-Ce document comporte une base de donnée ainsi qu'une interface de saisie.
+Ce document comporte une base de données ainsi qu'une interface de saisie.
 \\
 
 Cette solution comporte de nombreux inconvénients.
@@ -92,7 +96,7 @@ En étudiant la solution actuelle, les chefs de projet et architectes ont décid
 Cette nouvelle solution devra répondre aux besoins de l'utilisateur, en corrigeant les inconvénients de l'ancienne ainsi qu'en apportant de nouvelles fonctionnalités.
 \\
 
-Il es tout débord nécessaire de changer de base de données pour se tourner vers un système plus performant et centralisé.
+Il est tout débord nécessaire de changer de base de données pour se tourner vers un système plus performant et centralisé.
 Un nouveau schéma de données adapté aux nouveaux besoins permettra de mieux structurer ces données.
 
 Pour améliorer l'ergonomie de l'application, la nouvelle solution sera un \textit{client léger}.
