--- a/src/remerciements.tex
+++ b/src/remerciements.tex
@@ -2,8 +2,7 @@
 
 \chapter*{Remerciements}
 
-\addcontentsline{toc}{chapter}{Remerciements}
-\markboth{Remerciements}{}
+\thispagestyle{empty}
 
 
 
