--- a/src/partie_2.tex
+++ b/src/partie_2.tex
@@ -186,7 +186,7 @@ Ce code est ensuite compilé à la volée lors de la première exécution grâce
 	\center
 	\includegraphics[width=0.6\textwidth]{img/NET_Framework.png}
 	\caption{Couches de .NET Framework}
-	Source : \href{http://fr.wikipedia.org/wiki/Framework_.NET}{http://fr.wikipedia.org/wiki/Framework\_.NET}
+	Source : \href{http://fr.wikipedia.org/wiki/Framework\_.NET}{Wikipedia}
 	\label{NET_Framework}
 \end{figure}
 
@@ -333,7 +333,7 @@ et JSON :
 
 \Jparagraph{Windows Communication Foundation}
 
-\textit{Windows Communication Foundation}, couramment appelé sous ses initiales WCF, est la couche de communication de .NET Framework, apparue dans la version 3.0.
+\textit{Windows Communication Foundation} [WCF], couramment appelé sous ses initiales WCF, est la couche de communication de .NET Framework, apparue dans la version 3.0.
 Cette technologie respecte les normes standards des services web, ce qui lui permet d'appeler ou d'être appelé par des technologies différentes (Java, Python, \ldots).
 
 Ce framework a été utilisé pour réaliser le service web de l'application, exposant ainsi différentes fonctions utiles à la couche d'affichage.
@@ -351,7 +351,7 @@ C'est le cas par exemple lorsque l'on souhaite vérifier la validité des donné
 \end{enumerate}
 ~~\\
 
-Pour éviter ce problème, Microsoft propose le framework \textit{WCF RIA Services}.
+Pour éviter ce problème, Microsoft propose le framework \textit{WCF RIA Services} [RIA].
 Cet outil duplique du code d'un projet pour le copier dans un autre, de façon automatiquement lors de la compilation.
 L'opération est schématisé sur la figure \ref{WCF_RIA_Services}.
 Ceci permet d'avoir un code métier constamment à jour sans avoir à effectuer les modifications dans les différentes couches.
@@ -403,7 +403,7 @@ Le serveur de rapports est installé sur la même machine que celle de la base d
 \subsubsection{Silverlight}
 \label{Silverlight}
 
-Microsoft \textit{Silverlight} est un plugin pour navigateur web.
+Microsoft \textit{Silverlight} [Silverlight] est un plugin pour navigateur web.
 Il permet le développement d'applications riches et de pousser plus loin l'expérience utilisateur du web 2.0, au même titre qu'Adobe Flash dont il se veut une alternative.
 Initialement prévu pour des applications web dans un navigateur, les programmes peuvent être téléchargés pour être utilisés directement sur l'ordinateur ("out of browser"), et permettent aussi le développement d'applications pour Windows Phone 7.
 
