--- a/src/abstract.tex
+++ b/src/abstract.tex
@@ -6,7 +6,15 @@
 
 
 
-TODO
+During my ISIMA third year studies, my work placement's aim was to incorporate an information technology services and software development company, assigned to a project to redesign an application for recruitment of seasonal.
 \\
 
-\textbf{Keywords : } Sopra Group, Microsoft, VB.NET, Silverlight, SQL Server
+I have first examined customer needs and the existing solution, allowing the modeling the data model and the new application.
+
+After the choice of technology, I developed the first functional version of the application.
+This allowed the client to enumerate problems and propose ergonomic and functional improvements.
+
+When then application was operational and deployed, I imported the data from the old to new database for effective transition.
+\\
+
+\textbf{Keywords : } Sopra Group, Microsoft, VB.NET, Silverlight, SQL Server, WCF RIA Services
