--- a/src/resume.tex
+++ b/src/resume.tex
@@ -17,4 +17,4 @@ Celle-ci a permis au client d'énumérer les problèmes et proposer des amélior
 Une fois l'application opérationnelle et son déploiement effectué, il ne restait plus qu'à importer les données de l'ancienne base de données pour permettre une transition efficace.
 \\
 
-\textbf{Mots clé : } Sopra Group, Microsoft, VB.NET, Silverlight, SQL Server
+\textbf{Mots clé : } Sopra Group, Microsoft, VB.NET, Silverlight, SQL Server, WCF RIA Services
